--- a/cke/logging-overlay.yaml
+++ b/cke/logging-overlay.yaml
@@ -2,12 +2,16 @@ applications:
   apache2:
     charm: cs:apache2
     num_units: 1
+    to:
+    - lxd:13
     expose: true
     options:
       enable_modules: "headers proxy_html proxy_http"
   elasticsearch:
     charm: cs:elasticsearch
     num_units: 1
+    to:
+    - lxd:13
     options:
       apt-repository: "deb https://artifacts.elastic.co/packages/6.x/apt stable main"
   filebeat:
@@ -18,11 +22,15 @@ applications:
   graylog:
     charm: cs:graylog
     num_units: 1
+    to:
+    - lxd:13
     options:
       channel: "3/stable"
   mongodb:
     charm: cs:mongodb
     num_units: 1
+    to:
+    - lxd:13
     options:
       extra_daemon_options: "--bind_ip_all"
 relations:
