--- a/osc/bundle.yaml
+++ b/osc/bundle.yaml
@@ -2,7 +2,7 @@ variables:
   openstack-origin:    &openstack-origin     cloud:bionic-ussuri
   data-port:           &data-port            br-ex:eno2
   worker-multiplier:   &worker-multiplier    0.25
-  osd-devices:         &osd-devices          /dev/sdb /dev/vdb
+  osd-devices:         &osd-devices          /dev/sdb
   expected-osd-count:  &expected-osd-count   3
   expected-mon-count:  &expected-mon-count   3
   mysql-connections:   &mysql-connections    1000
