--- a/osc/bundle.yaml
+++ b/osc/bundle.yaml
@@ -1,11 +1,11 @@
 variables:
   openstack-origin:    &openstack-origin     cloud:bionic-ussuri
-  data-port:           &data-port            br-ex:eno2
+  data-port:           &data-port            br-ex:ens6
   worker-multiplier:   &worker-multiplier    0.25
   osd-devices:         &osd-devices          /dev/sdb
   expected-osd-count:  &expected-osd-count   3
   expected-mon-count:  &expected-mon-count   3
-  mysql-connections:   &mysql-connections    1000
+  mysql-connections:   &mysql-connections    20000
 machines:
   '0':
     series: bionic
