--- a/osc/bundle.yaml
+++ b/osc/bundle.yaml
@@ -1,3 +1,8 @@
+local_overlay_enabled: true
+series: focal
+# *** Please refer to the OpenStack Charms Deployment Guide for more        ***
+# *** information.
+# *** https://docs.openstack.org/project-deploy-guide/charm-deployment-guide **
 variables:
   openstack-origin:    &openstack-origin     cloud:focal-victoria
   data-port:           &data-port            br-ex:ens6
@@ -5,7 +10,6 @@ variables:
   osd-devices:         &osd-devices          /dev/sdb
   expected-osd-count:  &expected-osd-count   3
   expected-mon-count:  &expected-mon-count   3
-  mysql-connections:   &mysql-connections    20000
 machines:
   '0':
     series: focal
@@ -13,31 +17,17 @@ machines:
     series: focal
   '2':
     series: focal
-  '3':
-    series: focal
 relations:
 - - nova-compute:amqp
   - rabbitmq-server:amqp
-- - neutron-gateway:amqp
-  - rabbitmq-server:amqp
-- - keystone:shared-db
-  - mysql:shared-db
 - - nova-cloud-controller:identity-service
   - keystone:identity-service
 - - glance:identity-service
   - keystone:identity-service
 - - neutron-api:identity-service
   - keystone:identity-service
-- - neutron-openvswitch:neutron-plugin-api
-  - neutron-api:neutron-plugin-api
-- - neutron-api:shared-db
-  - mysql:shared-db
 - - neutron-api:amqp
   - rabbitmq-server:amqp
-- - neutron-gateway:neutron-plugin-api
-  - neutron-api:neutron-plugin-api
-- - glance:shared-db
-  - mysql:shared-db
 - - glance:amqp
   - rabbitmq-server:amqp
 - - nova-cloud-controller:image-service
@@ -48,14 +38,8 @@ relations:
   - nova-compute:cloud-compute
 - - nova-cloud-controller:amqp
   - rabbitmq-server:amqp
-- - nova-cloud-controller:quantum-network-service
-  - neutron-gateway:quantum-network-service
-- - nova-compute:neutron-plugin
-  - neutron-openvswitch:neutron-plugin
-- - neutron-openvswitch:amqp
-  - rabbitmq-server:amqp
-- - nova-cloud-controller:shared-db
-  - mysql:shared-db
+- - openstack-dashboard:identity-service
+  - keystone:identity-service
 - - nova-cloud-controller:neutron-api
   - neutron-api:neutron-api
 - - cinder:image-service
@@ -72,8 +56,6 @@ relations:
   - nova-compute:ceph
 - - nova-compute:ceph-access
   - cinder-ceph:ceph-access
-- - cinder:shared-db
-  - mysql:shared-db
 - - ceph-mon:client
   - cinder-ceph:ceph
 - - ceph-mon:client
@@ -82,181 +64,185 @@ relations:
   - ceph-mon:osd
 - - ntp:juju-info
   - nova-compute:juju-info
-- - ntp:juju-info
-  - neutron-gateway:juju-info
-- - placement
-  - mysql
+- - ceph-radosgw:mon
+  - ceph-mon:radosgw
+- - ceph-radosgw:identity-service
+  - keystone:identity-service
 - - placement
   - keystone
 - - placement
   - nova-cloud-controller
-- - placement:ha
-  - placement-hacluster:ha
-- - keystone:ha
-  - keystone-hacluster:ha
-- - nova-cloud-controller:ha
-  - nova-cc-hacluster:ha
-- - cinder:ha
-  - cinder-hacluster:ha
-- - glance:ha
-  - glance-hacluster:ha
-- - neutron-api:ha
-  - neutron-hacluster:ha
-- - mysql:ha
-  - mysql-hacluster:ha
-- - nova-cloud-controller:memcache
-  - memcached:cache
-series: focal
-services:
-  memcached:
-    series: focal
-    charm: cs:memcached
-    num_units: 1
-    to:
-    - 'lxd:0'
+- - keystone:shared-db
+  - keystone-mysql-router:shared-db
+- - cinder:shared-db
+  - cinder-mysql-router:shared-db
+- - glance:shared-db
+  - glance-mysql-router:shared-db
+- - nova-cloud-controller:shared-db
+  - nova-mysql-router:shared-db
+- - neutron-api:shared-db
+  - neutron-mysql-router:shared-db
+- - openstack-dashboard:shared-db
+  - dashboard-mysql-router:shared-db
+- - placement:shared-db
+  - placement-mysql-router:shared-db
+- - vault:shared-db
+  - vault-mysql-router:shared-db
+- - keystone-mysql-router:db-router
+  - mysql-innodb-cluster:db-router
+- - cinder-mysql-router:db-router
+  - mysql-innodb-cluster:db-router
+- - nova-mysql-router:db-router
+  - mysql-innodb-cluster:db-router
+- - glance-mysql-router:db-router
+  - mysql-innodb-cluster:db-router
+- - neutron-mysql-router:db-router
+  - mysql-innodb-cluster:db-router
+- - dashboard-mysql-router:db-router
+  - mysql-innodb-cluster:db-router
+- - placement-mysql-router:db-router
+  - mysql-innodb-cluster:db-router
+applications:
   ceph-mon:
     annotations:
-      gui-x: '750'
-      gui-y: '500'
-    charm: cs:ceph-mon
+      gui-x: '790'
+      gui-y: '1540'
+    charm: cs:ceph-mon-53
     num_units: 3
     options:
       expected-osd-count: *expected-osd-count
       monitor-count: *expected-mon-count
       source: *openstack-origin
     to:
-    - 'lxd:1'
-    - 'lxd:2'
-    - 'lxd:3'
+    - lxd:0
+    - lxd:1
+    - lxd:2
   ceph-osd:
     annotations:
-      gui-x: '1000'
-      gui-y: '500'
-    charm: cs:ceph-osd
+      gui-x: '1065'
+      gui-y: '1540'
+    charm: cs:ceph-osd-308
     num_units: 3
     options:
       osd-devices: *osd-devices
       source: *openstack-origin
     to:
+    - '0'
     - '1'
     - '2'
-    - '3'
-  cinder:
+  ceph-radosgw:
     annotations:
-      gui-x: '750'
-      gui-y: '0'
-    charm: cs:cinder
+      gui-x: '850'
+      gui-y: '900'
+    charm: cs:ceph-radosgw-294
     num_units: 3
     options:
-      worker-multiplier: *worker-multiplier
-      openstack-origin: *openstack-origin
+      source: *openstack-origin
+    to:
+    - lxd:0
+    - lxd:1
+    - lxd:2
+  cinder-mysql-router:
+    annotations:
+      gui-x: '900'
+      gui-y: '1400'
+    charm: cs:mysql-router-6
+  cinder:
+    annotations:
+      gui-x: '980'
+      gui-y: '1270'
+    charm: cs:cinder-308
+    num_units: 3
+    options:
       block-device: None
       glance-api-version: 2
+      worker-multiplier: *worker-multiplier
+      openstack-origin: *openstack-origin
     to:
-    - 'lxd:1'
-    - 'lxd:2'
-    - 'lxd:3'
+    - lxd:0
+    - lxd:1
+    - lxd:2
   cinder-ceph:
     annotations:
-      gui-x: '750'
-      gui-y: '250'
-    charm: cs:cinder-ceph
+      gui-x: '1120'
+      gui-y: '1400'
+    charm: cs:cinder-ceph-260
     num_units: 0
   cinder-hacluster:
     charm: cs:hacluster
     options:
       cluster_count: 3
       corosync_transport: unicast
+  glance-mysql-router:
+    annotations:
+      gui-x: '-290'
+      gui-y: '1400'
+    charm: cs:mysql-router-6
   glance:
     annotations:
-      gui-x: '250'
-      gui-y: '0'
-    charm: cs:glance
+      gui-x: '-230'
+      gui-y: '1270'
+    charm: cs:glance-303
     num_units: 3
     options:
-      openstack-origin: *openstack-origin
       worker-multiplier: *worker-multiplier
+      openstack-origin: *openstack-origin
     to:
-    - 'lxd:1'
-    - 'lxd:2'
-    - 'lxd:3'
+    - lxd:0
+    - lxd:1
+    - lxd:2
   glance-hacluster:
     charm: cs:hacluster
     options:
       cluster_count: 3
       corosync_transport: unicast
+  keystone-mysql-router:
+    annotations:
+      gui-x: '230'
+      gui-y: '1400'
+    charm: cs:mysql-router-6
   keystone:
     annotations:
-      gui-x: '500'
-      gui-y: '0'
-    charm: cs:keystone
+      gui-x: '300'
+      gui-y: '1270'
+    charm: cs:keystone-321
     num_units: 3
     options:
-      openstack-origin: *openstack-origin
       worker-multiplier: *worker-multiplier
+      openstack-origin: *openstack-origin
     to:
-    - 'lxd:1'
-    - 'lxd:2'
-    - 'lxd:3'
+    - lxd:0
+    - lxd:1
+    - lxd:2
   keystone-hacluster:
     charm: cs:hacluster
     options:
       cluster_count: 3
       corosync_transport: unicast
-  mysql:
+  neutron-mysql-router:
     annotations:
-      gui-x: '0'
-      gui-y: '250'
-    series: bionic
-    charm: cs:percona-cluster
-    num_units: 3
-    options:
-      max-connections: *mysql-connections
-      innodb-buffer-pool-size: 512M
-      min-cluster-size: 3
-    to:
-    - 'lxd:1'
-    - 'lxd:2'
-    - 'lxd:3'
-  mysql-hacluster:
-    charm: cs:hacluster
-    options:
-      corosync_transport: unicast
-      cluster_count: 3
-  placement:
-    annotations:
-      gui-x: '0'
-      gui-y: '500'
-    charm: cs:placement
-    num_units: 3
-    options:
-      worker-multiplier: *worker-multiplier
-      openstack-origin: *openstack-origin
-    to:
-    - 'lxd:1'
-    - 'lxd:2'
-    - 'lxd:3'
-  placement-hacluster:
-    charm: cs:hacluster
-    options:
-      cluster_count: 3
-      corosync_transport: unicast
+      gui-x: '505'
+      gui-y: '1385'
+    charm: cs:mysql-router-6
   neutron-api:
     annotations:
-      gui-x: '500'
-      gui-y: '500'
-    charm: cs:neutron-api
+      gui-x: '580'
+      gui-y: '1270'
+    charm: cs:neutron-api-292
     num_units: 3
     options:
       manage-neutron-plugin-legacy-mode: true
-      openstack-origin: *openstack-origin
-      flat-network-providers: physnet1
       neutron-security-groups: true
+      flat-network-providers: physnet1
       worker-multiplier: *worker-multiplier
+      openstack-origin: *openstack-origin
+      enable-l3ha: true
+      max-l3-agents-per-router: 3
+      overlay-network-type: vxlan
     to:
-    - 'lxd:1'
-    - 'lxd:2'
-    - 'lxd:3'
+    - lxd:0
+    - lxd:1
+    - lxd:2
   neutron-hacluster:
     charm: cs:hacluster
     options:
@@ -267,7 +253,7 @@ services:
       gui-x: '0'
       gui-y: '0'
     charm: cs:neutron-gateway
-    num_units: 1
+    num_units: 3
     options:
       openstack-origin: *openstack-origin
       bridge-mappings: physnet1:br-ex
@@ -275,26 +261,56 @@ services:
       worker-multiplier: *worker-multiplier
     to:
     - '0'
+    - '1'
+    - '2'
   neutron-openvswitch:
     annotations:
       gui-x: '250'
       gui-y: '500'
     charm: cs:neutron-openvswitch
     num_units: 0
-  nova-cloud-controller:
+  placement-mysql-router:
     annotations:
-      gui-x: '0'
-      gui-y: '500'
-    charm: cs:nova-cloud-controller
+      gui-x: '1320'
+      gui-y: '1385'
+    charm: cs:mysql-router-6
+  placement:
+    annotations:
+      gui-x: '1320'
+      gui-y: '1270'
+    charm: cs:placement-17
     num_units: 3
     options:
+      worker-multiplier: *worker-multiplier
       openstack-origin: *openstack-origin
+    to:
+    - lxd:0
+    - lxd:1
+    - lxd:2
+  placement-hacluster:
+    charm: cs:hacluster
+    options:
+      cluster_count: 3
+      corosync_transport: unicast
+  nova-mysql-router:
+    annotations:
+      gui-x: '-30'
+      gui-y: '1385'
+    charm: cs:mysql-router-6
+  nova-cloud-controller:
+    annotations:
+      gui-x: '35'
+      gui-y: '1270'
+    charm: cs:nova-cloud-controller-352
+    num_units: 3
+    options:
       network-manager: Neutron
       worker-multiplier: *worker-multiplier
+      openstack-origin: *openstack-origin
     to:
-    - 'lxd:1'
-    - 'lxd:2'
-    - 'lxd:3'
+    - lxd:0
+    - lxd:1
+    - lxd:2
   nova-cc-hacluster:
     charm: cs:hacluster
     options:
@@ -302,33 +318,64 @@ services:
       corosync_transport: unicast
   nova-compute:
     annotations:
-      gui-x: '250'
-      gui-y: '250'
-    charm: cs:nova-compute
+      gui-x: '190'
+      gui-y: '890'
+    charm: cs:nova-compute-325
     num_units: 3
     options:
       config-flags: default_ephemeral_format=ext4
-      openstack-origin: *openstack-origin
       enable-live-migration: true
       enable-resize: true
       migration-auth-type: ssh
+      openstack-origin: *openstack-origin
     to:
+    - '0'
     - '1'
     - '2'
-    - '3'
   ntp:
     annotations:
-      gui-x: '1000'
-      gui-y: '0'
-    charm: cs:ntp
+      gui-x: '315'
+      gui-y: '1030'
+    charm: cs:ntp-44
     num_units: 0
+  dashboard-mysql-router:
+    annotations:
+      gui-x: '510'
+      gui-y: '1030'
+    charm: cs:mysql-router-6
+  openstack-dashboard:
+    annotations:
+      gui-x: '585'
+      gui-y: '900'
+    charm: cs:openstack-dashboard-311
+    num_units: 3
+    options:
+      openstack-origin: *openstack-origin
+    to:
+    - lxd:0
+    - lxd:1
+    - lxd:2
+  openstack-dashboard-hacluster:
+    charm: cs:hacluster
+    options:
+      corosync_transport: unicast
   rabbitmq-server:
     annotations:
-      gui-x: '500'
-      gui-y: '250'
-    charm: cs:rabbitmq-server
-    num_units: 1
-    options:
-      source: *openstack-origin
+      gui-x: '300'
+      gui-y: '1550'
+    charm: cs:rabbitmq-server-108
+    num_units: 3
     to:
-    - 'lxd:0'
+    - lxd:0
+    - lxd:1
+    - lxd:2
+  mysql-innodb-cluster:
+    annotations:
+      gui-x: '535'
+      gui-y: '1550'
+    charm: cs:mysql-innodb-cluster-5
+    num_units: 3
+    to:
+    - lxd:0
+    - lxd:1
+    - lxd:2
